--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <div id="app">
         <header>
             <h1 id="brand">GIPPP</h1>
-            <p>Global Insight Profiler Project Prototype</p>
+            <!-- 언어에 따라 바뀔 설명 문구 -->
+            <p id="brand-desc"></p>
             <div id="progress-bar"><div id="progress-fill"></div></div>
         </header>
 
         <main id="main-content">
             <div id="question-container">
-                <p id="question-text">엔진 로딩 중...</p>
+                <p id="question-text"></p>
                 <div id="options-group"></div>
             </div>
         </main>
 
         <footer>
-            <p class="security-note">🔒 보안 안내: 본 시스템은 어떠한 데이터도 서버에 저장하지 않으며, 창을 닫는 즉시 모든 분석 데이터는 파기됩니다.</p>
+            <!-- 언어에 따라 바뀔 보안 안내 문구 -->
+            <p id="security-note" class="security-note"></p>
         </footer>
     </div>
     <script src="engine.js"></script>
