--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIPPP | Global Insight Profiler</title>
+    <!-- SEO 및 SNS 공유 설정 (OpenGraph) -->
+    <meta name="description" content="Discover your inner self with GIPPP. Professional psychological analysis based on IPIP data.">
+    <meta property="og:title" content="GIPPP | Global Insight Profiler">
+    <meta property="og:description" content="Free professional personality test. No data stored.">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="app">
         <header>
             <h1 id="brand">GIPPP</h1>
-            <!-- 언어에 따라 바뀔 설명 문구 -->
             <p id="brand-desc"></p>
             <div id="progress-bar"><div id="progress-fill"></div></div>
         </header>
@@ -23,7 +27,6 @@
         </main>
 
         <footer>
-            <!-- 언어에 따라 바뀔 보안 안내 문구 -->
             <p id="security-note" class="security-note"></p>
         </footer>
     </div>
