--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
-<!DOCTYPE html>
-<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIPPP | Global Insight Profiler</title>
-    <!-- SEO 및 SNS 공유 설정 (OpenGraph) -->
-    <meta name="description" content="Discover your inner self with GIPPP. Professional psychological analysis based on IPIP data.">
-    <meta property="og:title" content="GIPPP | Global Insight Profiler">
-    <meta property="og:description" content="Free professional personality test. No data stored.">
+    
+    <!-- 기본 타이틀 및 설명 -->
+    <title>GIPPP | Global Insight Profiler Project</title>
+    <meta name="description" content="Discover your hidden potential with GIPPP. Professional personality analysis based on global IPIP datasets. No data stored, 100% secure.">
+    <meta name="keywords" content="Personality Test, Big Five, IPIP, Psychology, Self-Discovery, GIPPP">
+
+    <!-- OpenGraph (SNS 공유용) -->
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-username.github.io/gippp-project/"> <!-- 실제 주소로 변경 필요 -->
+    <meta property="og:title" content="GIPPP: Who are you really?">
+    <meta property="og:description" content="Get professional psychological insights in 3 minutes. Your data is never stored.">
+    <meta property="og:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="GIPPP | Global Insight Profiler">
+    <meta name="twitter:description" content="Professional Big Five analysis. Secure and Anonymous.">
+    <meta name="twitter:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
+
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="app">
-        <header>
-            <h1 id="brand">GIPPP</h1>
-            <p id="brand-desc"></p>
-            <div id="progress-bar"><div id="progress-fill"></div></div>
-        </header>
-
-        <main id="main-content">
-            <div id="question-container">
-                <p id="question-text"></p>
-                <div id="options-group"></div>
-            </div>
-        </main>
-
-        <footer>
-            <p id="security-note" class="security-note"></p>
-        </footer>
-    </div>
-    <script src="engine.js"></script>
-</body>
-</html>
