--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,4 +24,24 @@
     <meta name="twitter:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
 
     <link rel="stylesheet" href="style.css">
+    <!-- 구조화 데이터 (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "GIPPP (Global Insight Profiler Project)",
+  "operatingSystem": "Any",
+  "applicationCategory": "PsychologyApplication",
+  "description": "A professional-grade personality analysis tool based on the Big Five model and IPIP datasets. Features zero-data persistence for maximum security.",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "GIPPP Team"
+  }
+}
+</script>
 </head>
