--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
-
+<!DOCTYPE html>
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Insight Profiler (Temporary: GIPPP)</title>
     
-    <!-- 기본 타이틀 및 설명 -->
-    <title>GIPPP | Global Insight Profiler Project</title>
-    <meta name="description" content="Discover your hidden potential with GIPPP. Professional personality analysis based on global IPIP datasets. No data stored, 100% secure.">
-    <meta name="keywords" content="Personality Test, Big Five, IPIP, Psychology, Self-Discovery, GIPPP">
-
-    <!-- OpenGraph (SNS 공유용) -->
+    <!-- SEO 및 SNS 공유 설정 -->
+    <meta name="description" content="Professional personality analysis based on global IPIP datasets. No data stored, 100% secure.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-username.github.io/gippp-project/"> <!-- 실제 주소로 변경 필요 -->
-    <meta property="og:title" content="GIPPP: Who are you really?">
+    <meta property="og:title" content="Insight Profiler: Who are you really?">
     <meta property="og:description" content="Get professional psychological insights in 3 minutes. Your data is never stored.">
     <meta property="og:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="GIPPP | Global Insight Profiler">
-    <meta name="twitter:description" content="Professional Big Five analysis. Secure and Anonymous.">
-    <meta name="twitter:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
+    <!-- 구조화 데이터 (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Insight Profiler",
+      "operatingSystem": "Any",
+      "applicationCategory": "PsychologyApplication",
+      "description": "Professional-grade personality analysis tool with zero-data persistence.",
+      "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
 
     <link rel="stylesheet" href="style.css">
-    <!-- 구조화 데이터 (JSON-LD) -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "SoftwareApplication",
-  "name": "GIPPP (Global Insight Profiler Project)",
-  "operatingSystem": "Any",
-  "applicationCategory": "PsychologyApplication",
-  "description": "A professional-grade personality analysis tool based on the Big Five model and IPIP datasets. Features zero-data persistence for maximum security.",
-  "offers": {
-    "@type": "Offer",
-    "price": "0",
-    "priceCurrency": "USD"
-  },
-  "author": {
-    "@type": "Person",
-    "name": "GIPPP Team"
-  }
-}
-</script>
 </head>
+<body>
+    <div id="app">
+        <header>
+            <h1 id="brand">GIPPP</h1>
+            <p id="brand-desc"></p>
+            <div id="progress-bar"><div id="progress-fill"></div></div>
+        </header>
+
+        <main id="main-content">
+            <div id="question-container">
+                <p id="question-text">Initializing Engine...</p>
+                <div id="options-group"></div>
+            </div>
+        </main>
+
+        <footer>
+            <p id="security-note" class="security-note"></p>
+        </footer>
+    </div>
+    <script src="engine.js"></script>
+</body>
+</html>
