--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insight Profiler (Temporary: GIPPP)</title>
+    <title>Insight Profiler | Discover Your Inner Self</title>
     
-    <!-- SEO 및 SNS 공유 설정 -->
+    <!-- SEO 및 SNS 공유 설정 (GIPPP 임시 명칭 반영) -->
     <meta name="description" content="Professional personality analysis based on global IPIP datasets. No data stored, 100% secure.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Insight Profiler: Who are you really?">
     <meta property="og:description" content="Get professional psychological insights in 3 minutes. Your data is never stored.">
     <meta property="og:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
 
-    <!-- 구조화 데이터 (JSON-LD) -->
+    <!-- 구조화 데이터 (JSON-LD) - 검색 엔진 최적화 -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -46,6 +47,7 @@
             <p id="security-note" class="security-note"></p>
         </footer>
     </div>
+    <!-- 핵심 엔진 로드 -->
     <script src="engine.js"></script>
 </body>
 </html>
