--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insight Profiler</title>
+    <title>Insight Profiler | Discover Your Inner Self</title>
+    
+    <!-- SEO 및 SNS 공유 설정 (GIPPP 임시 명칭 반영) -->
+    <meta name="description" content="Professional personality analysis based on global IPIP datasets. No data stored, 100% secure.">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Insight Profiler: Who are you really?">
+    <meta property="og:description" content="Get professional psychological insights in 3 minutes. Your data is never stored.">
+    <meta property="og:image" content="https://your-username.github.io/gippp-project/assets/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- 구조화 데이터 (JSON-LD) - 검색 엔진 최적화 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Insight Profiler",
+      "operatingSystem": "Any",
+      "applicationCategory": "PsychologyApplication",
+      "description": "Professional-grade personality analysis tool with zero-data persistence.",
+      "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,16 +35,19 @@
             <p id="brand-desc"></p>
             <div id="progress-bar"><div id="progress-fill"></div></div>
         </header>
+
         <main id="main-content">
             <div id="question-container">
-                <p id="question-text">Loading...</p>
+                <p id="question-text">Initializing Engine...</p>
                 <div id="options-group"></div>
             </div>
         </main>
+
         <footer>
             <p id="security-note" class="security-note"></p>
         </footer>
     </div>
+    <!-- 핵심 엔진 로드 -->
     <script src="engine.js"></script>
 </body>
 </html>
