--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
         <header>
             <div class="lang-selector">
                 <select id="lang-select" onchange="GIPPP_ENGINE.changeLanguage(this.value)">
-                    <option value="ko">한국어</option>
+                    <option value="de">Deutsch</option>
                     <option value="en">English</option>
                     <option value="es">Español</option>
-                    <option value="jp">日本語</option>
-                    <option value="vn">Tiếng Việt</option>
+                    <option value="ja">日本語</option>
+                    <option value="ko">한국어</option>
+                    <option value="pt">Português</option>
+                    <option value="ru">Русский</option>
+                    <option value="vi">Tiếng Việt</option>
+                    <option value="zh">中文</option>
                 </select>
             </div>
             <h1 id="brand">GIPPP</h1>
