--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
         <header>
             <div class="lang-selector">
                 <select id="lang-select" onchange="GIPPP_ENGINE.changeLanguage(this.value)">
-                    <option value="de">Deutsch</option>
-                    <option value="en">English</option>
-                    <option value="es">Español</option>
-                    <option value="ja">日本語</option>
-                    <option value="ko">한국어</option>
-                    <option value="pt">Português</option>
-                    <option value="ru">Русский</option>
-                    <option value="vi">Tiếng Việt</option>
-                    <option value="zh">中文</option>
-                </select>
+    <option value="ar">العربية (Arabic)</option> <!-- 알파벳 순서상 상단 배치 가능 -->
+    <option value="de">Deutsch</option>
+    <option value="en">English</option>
+    <option value="es">Español</option>
+    <option value="ja">日本語</option>
+    <option value="ko">한국어</option>
+    <option value="pt">Português</option>
+    <option value="ru">Русский</option>
+    <option value="vi">Tiếng Việt</option>
+    <option value="zh">中文</option>
+</select>
             </div>
             <h1 id="brand">GIPPP</h1>
             <p id="brand-desc"></p>
