--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
         </nav>
 
         <main id="main-content">
-            <!-- [대문 섹션: Premium Lounge] -->
+            <!-- [대문 섹션] -->
             <section id="welcome-view">
                 <header class="hero-section">
                     <h1 id="brand">GIPPP</h1>
                     <p id="brand-desc" class="hero-subtitle"></p>
                 </header>
-                
                 <div class="content-wrapper">
                     <div class="ad-slot top-ad">ADVERTISEMENT</div>
-                    <div id="test-grid" class="test-grid"></div>
+                    <div id="test-grid" class="test-grid">
+                        <!-- JS에서 즉시 생성됨 -->
+                    </div>
                 </div>
             </section>
 
