--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIPPP | Global Insight Profiler</title>
-    <link rel="stylesheet" href="/style.css">  <!-- 절대 경로로 변경 (GitHub Pages 안전) -->
+    <link rel="stylesheet" href="/style.css">
+    <!-- Google AdSense & GA4 스크립트는 여기서 동의 후 로드 (추후 추가) -->
+    <!-- 예: <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX"></script> -->
     <style>
-        /* 임시 로딩 스타일 - 메인 콘텐츠 숨김 */
-        body { visibility: hidden; }
+        body { visibility: hidden; } /* 로딩 완료 전 숨김 */
         .loading { position: fixed; inset: 0; background: #f4f7f9; display: flex; align-items: center; justify-content: center; font-size: 1.2rem; color: #3498db; z-index: 9999; }
     </style>
 </head>
@@ -18,14 +19,11 @@
         <nav class="global-nav">
             <div class="nav-content">
                 <div class="live-status"><span class="dot"></span> Global Live Profiling</div>
-                <div class="lang-picker">
-                    <select id="lang-select"></select>
-                </div>
+                <div class="lang-picker"><select id="lang-select"></select></div>
             </div>
         </nav>
 
         <main id="main-content">
-            <!-- 대문 섹션 -->
             <section id="welcome-view">
                 <header class="hero-section">
                     <h1 id="brand">GIPPP</h1>
@@ -37,7 +35,6 @@
                 </div>
             </section>
 
-            <!-- 테스트 & 결과 섹션 -->
             <section id="test-view" style="display:none;">
                 <div class="test-container">
                     <div id="progress-bar"><div id="progress-fill"></div></div>
@@ -52,14 +49,12 @@
             <div class="footer-content">
                 <div class="ad-slot bottom-ad">ADVERTISEMENT</div>
                 <p>© GIPPP Project | Anonymous & Secure Insight</p>
-                <p><a href="/privacy.html" style="color:#999; font-size:0.8rem;">개인정보 처리방침</a></p>
             </div>
         </footer>
     </div>
 
-    <script src="/engine.js"></script>  <!-- 절대 경로 -->
+    <script src="/engine.js"></script>
     <script>
-        // 로딩 화면 숨기기 (JS 완전 로드 후)
         window.addEventListener('load', () => {
             document.body.style.visibility = 'visible';
             document.querySelector('.loading')?.remove();
